homeassistant/CiliumNetworkPolicy-postgresqlPolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgresqlPolicy
  namespace: homeassistant
spec:
  egress:
    - {}
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: homeassistant_failing
      toPorts:
        - ports:
            - port: "5432"
